--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,30 +9,27 @@
         android:id="@+id/InnerRelativeLayout"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_alignParentBottom="true" >
-	
-	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" 
-    android:gravity="center"
-    android:orientation="horizontal"
-    android:layout_alignParentBottom="true" >
-    
-    <Button
+        android:layout_alignParentBottom="true"
+         >
+         
+     <ImageButton
+     	android:id="@+id/modify_button" 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/icon_modify"
+        android:layout_alignParentBottom="true" 
+        android:layout_centerInParent="true"
+         />
+        
+     <ImageButton
+    	android:id="@+id/add_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/icon_add"
-        android:layout_marginRight="30dip" />
+        android:layout_marginRight="30dip"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@id/modify_button"
+        android:layout_centerInParent="true" />
         
-     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/icon_modify" />
-        
-    </LinearLayout>
-
 </RelativeLayout>
-
-
 </RelativeLayout>
