--- a/res/layout/activity_add_alarm.xml
+++ b/res/layout/activity_add_alarm.xml
@@ -3,38 +3,47 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="horizontal" 
-    android:background="#000000"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin" >
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".AddAlarmActivity" 
+    android:background="#efefef" >
 
-<RelativeLayout 
+    <RelativeLayout 
         android:id="@+id/InnerRelativeLayout"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_alignParentBottom="true"
-         >
-         
-     <ImageButton
-     	android:id="@+id/modify_button" 
+        android:layout_alignParentBottom="true">
+    
+    <TimePicker
+        android:id="@+id/timepicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/icon_modify"
+       />
+    
+    <ImageButton
+     	android:id="@+id/cancel_button" 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/icon_cancel"
         android:layout_alignParentBottom="true" 
         android:layout_centerInParent="true"
+        android:onClick="finish"
          />
         
      <ImageButton
-    	android:id="@+id/add_button"
+    	android:id="@+id/save_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/icon_add"
+        android:background="@drawable/icon_save"
         android:layout_marginRight="30dip"
         android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@id/modify_button"
+        android:layout_toRightOf="@id/cancel_button"
         android:layout_centerInParent="true"
-        android:onClick="addAlarm" />
-        
-</RelativeLayout>
+        android:onClick="saveAlarm"
+         />
+     
+     </RelativeLayout>
+
 </RelativeLayout>
