--- a/res/layout/activity_add_alarm.xml
+++ b/res/layout/activity_add_alarm.xml
@@ -20,7 +20,7 @@
         android:id="@+id/timepicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-       />
+        android:focusable="false" />
     
     <ImageButton
      	android:id="@+id/cancel_button" 
