--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -10,11 +10,20 @@
             res/values-vXX/styles.xml, while customizations related to
             backward-compatibility can go here.
         -->
+         <item name="android:textColor">#ffffff</item>
     </style>
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColorPrimary">#ffffff</item>
+        <item name="android:textColorSecondary">#ffffff</item>
+        <item name="android:textColorTertiary">#ffffff</item>
     </style>
+    
+    <style name="timePicker" parent="AppBaseTheme">
+	   <item name="android:textColor">#ffffff</item>
+	 </style>
 
 </resources>
