--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -25,23 +25,27 @@
         android:layout_alignParentBottom="true" 
         android:layout_centerInParent="true"
          /> -->
-        
-     <ImageButton
-    	android:id="@+id/add_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/icon_modify"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:onClick="addAlarm" />
 
      <AnalogClock
-         android:id="@+id/analogClock1"
+         android:id="@+id/analogClock"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
-         android:layout_alignParentTop="true"
+         android:layout_above="@+id/add_button"
+         android:layout_alignParentLeft="true"
+         android:layout_alignParentRight="true"
+         android:layout_alignParentTop="true" />
+
+     <ImageButton
+         android:id="@+id/add_button"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignParentBottom="true"
          android:layout_centerHorizontal="true"
-         android:layout_marginTop="70dp" />
+         android:background="@drawable/icon_modify"
+         android:minHeight="80dip"
+         android:minWidth="80dip"
+         android:onClick="addAlarm"
+         android:scaleType="center" />
         
 </RelativeLayout>
 </RelativeLayout>
