--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,3 +1,4 @@
+<!-- layout schema ofr mainActivity -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
@@ -16,7 +17,7 @@
         android:layout_alignParentBottom="true"
          >
          
-         <!--
+     <!-- modify alarm button. Removed as is not necessary until multiple alarms are used
      <ImageButton
      	android:id="@+id/modify_button" 
         android:layout_width="wrap_content"
