--- a/res/layout/math_layout.xml
+++ b/res/layout/math_layout.xml
@@ -1,3 +1,4 @@
+<!-- layout schema ofr MathActivity -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
