--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,48 +10,43 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
 
-<RelativeLayout
-    android:id="@+id/InnerRelativeLayout"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_alignParentRight="true"
-    android:layout_centerVertical="true" >
-
-    <AnalogClock
-        android:id="@+id/analogClock"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/add_button"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" />
-
-    <ImageButton
-        android:id="@+id/modify_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+<RelativeLayout 
+        android:id="@+id/InnerRelativeLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="59dp"
+         >
+         
+     <!-- modify alarm button. Removed as is not necessary until multiple alarms are used
+     <ImageButton
+     	android:id="@+id/modify_button" 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@drawable/icon_modify"
-        android:minHeight="80dip"
-        android:minWidth="80dip"
-        android:onClick="listAlarms"
-        android:scaleType="center" />
+        android:layout_alignParentBottom="true" 
+        android:layout_centerInParent="true"
+         /> -->
 
-    <ImageButton
-        android:id="@+id/add_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginRight="16dp"
-        android:layout_toLeftOf="@+id/modify_button"
-        android:background="@drawable/icon_add"
-        android:minHeight="80dip"
-        android:minWidth="80dip"
-        android:onClick="addAlarm"
-        android:scaleType="center" />
+     <AnalogClock
+         android:id="@+id/analogClock"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_above="@+id/add_button"
+         android:layout_alignParentLeft="true"
+         android:layout_alignParentRight="true"
+         android:layout_alignParentTop="true" />
 
+     <ImageButton
+         android:id="@+id/add_button"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignParentBottom="true"
+         android:layout_centerHorizontal="true"
+         android:background="@drawable/icon_modify"
+         android:minHeight="80dip"
+         android:minWidth="80dip"
+         android:onClick="addAlarm"
+         android:scaleType="center" />
+        
 </RelativeLayout>
-
 </RelativeLayout>
