Updated android activity labels

--- a/res/layout/math_layout.xml
+++ b/res/layout/math_layout.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:background="#000000"
     tools:context=".MathActivity"
-    android:padding="10dip" >
+    android:padding="10dip" 
+     >
 
     <TextView
         android:id="@+id/problem_text"
