--- a/res/layout/activity_add_alarm.xml
+++ b/res/layout/activity_add_alarm.xml
@@ -10,7 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".AddAlarmActivity" 
     android:background="#000000"
-    android:textColor="#ffffff" >
+    android:textColor="#ffffff" 
+     >
 
     <RelativeLayout 
         android:id="@+id/InnerRelativeLayout"
