Updated Goob background and UI

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -11,6 +11,7 @@
             backward-compatibility can go here.
         -->
          <item name="android:textColor">#ffffff</item>
+         <item name="android:background">@drawable/background</item>
     </style>
 
     <!-- Application theme. -->
