--- a/res/layout/activity_add_alarm.xml
+++ b/res/layout/activity_add_alarm.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".AddAlarmActivity" 
-    android:background="#000000"
+    android:background="@drawable/background"
     android:textColor="#ffffff" 
      >
 
